kubernetes/website/frontend/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: portfolio
spec:
  replicas: 1
  revisionHistoryLimit: 30
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 0%
  minReadySeconds: 5
  progressDeadlineSeconds: 120
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
        - name: regcred
      # Check this out for more security options: https://kubernetes.io/docs/tasks/configure-pod-container/security-context/
      securityContext:
        runAsNonRoot: true
        runAsUser: 1001
        fsGroup: 1001
      containers:
        - name: frontend
          image: imgregistry.anil-sezer.com/portfolio-ui:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
            - containerPort: 443 # todo: Remove this
          startupProbe:
            httpGet:
              path: /liveness
              port: 8080
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /liveness
              port: 8080
            timeoutSeconds: 1
            periodSeconds: 60
            failureThreshold: 3
# todo: create a grpc connection readiness probe?
#          readinessProbe:
#            httpGet:
#              path: /readiness
#              port: 8080
#            initialDelaySeconds: 60
#            timeoutSeconds: 1
#            periodSeconds: 60
#            failureThreshold: 3
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
