kubernetes/website/frontend/svc-clusterip.yml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: portfolio
spec:
  selector:
    app: frontend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
  type: ClusterIP
