kubernetes/website/frontend/svc-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-ui-service
  namespace: default
spec:
  selector:
    app: portfolio-ui
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
  type: LoadBalancer
